--- a/let_chat_room.css
+++ b/let_chat_room.css
@@ -151,6 +151,21 @@ border-bottom: 2px solid #fff;
   padding:10px;
   width: 15px;
 }
+.room-name {
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  transition: .3s all ease;
+  cursor: pointer;
+  width: 100%;
+  height: 40px;
+  border-radius: 8px;
+  text-align: center;
+  margin-top: 10px;
+}
+.room-name:hover {
+  background-color: rgba(255,255,255,0.1);
+}
 @media screen and (max-width:490px){
   .room_create_div input {
 width:100%;
